crates/talkbank-derive/tests/ui/fail_validation_tagged_on_struct.stderr
error: ValidationTagged can only be derived for enums
 --> tests/ui/fail_validation_tagged_on_struct.rs:5:1
  |
5 | / struct NotAnEnum {
6 | |     value: String,
7 | | }
  | |_^

warning: unused import: `talkbank_model::model`
 --> tests/ui/fail_validation_tagged_on_struct.rs:2:5
  |
2 | use talkbank_model::model;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
