crates/talkbank-derive/tests/ui/fail_validation_tagged_on_struct.rs
use talkbank_derive::ValidationTagged;
use talkbank_model::model;

#[derive(ValidationTagged)]
struct NotAnEnum {
    value: String,
}

fn main() {}
